# Platformer

./: CMakeLists.txt  README.md
resources/maps/: room_000.txt  room_000_entities.txt  room_001.txt  room_001_entities.txt  room_002.txt  room_002_entities.txt  room_003.txt  room_003_entities.txt  room_004.txt  room_004_entities.txt  room_01.txt  room_010.txt  room_010_entities.txt  room_011.txt  room_011_entities.txt  room_012.txt  room_012_entities.txt  room_013.txt  room_013_entities.txt  room_014.txt  room_014_entities.txt  room_015.txt  room_015_entities.txt  room_01_entities.txt  room_02.txt  room_020.txt  room_020_entities.txt  room_021.txt  room_021_entities.txt  room_022.txt  room_022_entities.txt  room_023.txt  room_023_entities.txt  room_025.txt  room_025_entities.txt  room_02_entities.txt  room_03.txt  room_030.txt  room_030_entities.txt  room_031.txt  (+37 more)
src/: main.cpp
src/components/: Camera.cpp  Camera.h  LevelMap.cpp  LevelMap.h  MiniMap.cpp  MiniMap.h  PhysicsSystem.cpp  PhysicsSystem.h  ProjectileRegistry.cpp  ProjectileRegistry.h  RoomLoader.h  SaveManager.cpp  SaveManager.h  SettingsManager.cpp  SettingsManager.h  TextureRectManager.cpp  TextureRectManager.h  TileMap.cpp  TileMap.h  TileRegistry.cpp  TileRegistry.h  UIManager.cpp  UIManager.h  WorldLoader.h
src/constants/: Action.h  Constants.cpp  Constants.h  EnemyBehaviourState.h  EnemyType.h  Faction.h  GameStatus.h  MovementMedium.h  PickupSize.h  PlayerAbility.h  PlayerState.h  ProjectileType.h  Solidity.h  SurfaceOrientation.h  TextureId.h  TileCategory.h  TileName.h  TileType.h
src/core/: AudioManager.cpp  GameData.cpp  GameData.h  InputManager.cpp  InputManager.h  State.h  StateManager.cpp  StateManager.h
src/data/: EntityCapabilities.h  InputActionState.h  InputBinding.h  PhysicsResult.h  ProjectileConfig.h  RoomData.cpp  RoomData.h  RoomEntity.h  RoomInstance.h  SaveData.h  SaveMeta.h  SaveSlot.h  TileDefinition.h  TileKey.h  TileProperties.h  WorldData.h
src/entities/: Enemy.cpp  Enemy.h  Item.cpp  Item.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h
src/states/: GameMenuState.cpp  GameMenuState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  LoadMenuState.cpp  (+9 more)
(+50 files in other folders)
